finally fixed camera/frame alignment, upload photo mode, sticker resizing feature

--- a/StyleSheets/menu.css
+++ b/StyleSheets/menu.css
@@ -1,28 +1,34 @@
-/* camera button */ 
-.camera{
+@font-face {
+    font-family: "starfont";
+    src: url("../Assets/starfont.otf") format("opentype");
+}
+
+/* shared button style matching .start */
+.camera, .upload {
     position: absolute;
+    color: #f2cccc;
+    -webkit-text-stroke: 1.5px #50433d;
+    background-color: #e9e1e1;
+    border: 2px solid #8b7d75;
+    font-size: 15px;
+    font-family: "starfont";
+    border-radius: 50px;
+    width: 120px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.camera {
     left: 45%;
     bottom: 65%;
-    width: 7%;
-    height: 7%;
-    font-size: clamp(16px, 1.2vw, 30px);
-
 }
 
-.camera:hover {
-    transform: scale(1.1);
-}
-
-/* upload button */
 .upload {
-    position: absolute;
     left: 45%;
     bottom: 45%;
-    width: 7%;
-    height: 10%;
-    font-size: clamp(16px, 1.2vw, 30px);
 }
 
-.upload:hover {
+.camera:hover, .upload:hover {
+    background-color: #f6e2e2;
     transform: scale(1.1);
 }
